--- a/code/2_metric_classification.ipynb
+++ b/code/2_metric_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "2_metric_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMVIcirF8Zw3EhUfVOjngYa",
+      "authorship_tag": "ABX9TyNgjPbbwTEjw8Wa8a1FvKU6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,6 @@
         "colab_type": "text"
       },
       "source": [
-        "'''\n",
         "Before we can calculate Precision/Recall, we need a way to match ID's with clustering group\n",
         "\n",
         "Psuedo-Code:\n",
@@ -53,8 +52,17 @@
         "For every cluster, count the number of dif PI IDs assigned to cluster.\n",
         "\n",
         "Mis-Separation:\n",
-        "For every PI ID, count the number of dif clusters it is assigned to.\n",
-        "'''"
+        "For every PI ID, count the number of dif clusters it is assigned to.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "n2H1i65xwClc",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Installation"
       ]
     },
     {
@@ -62,16 +70,16 @@
       "metadata": {
         "id": "r1PezbxlIvxs",
         "colab_type": "code",
+        "outputId": "850f20a1-f202-4a6f-9441-1418307148bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
-        },
-        "outputId": "850f20a1-f202-4a6f-9441-1418307148bf"
+        }
       },
       "source": [
         "!pip install boto"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,11 +117,11 @@
       "metadata": {
         "id": "kz_lqQxcIJhp",
         "colab_type": "code",
+        "outputId": "de0a89c1-d53b-435a-b825-9edc1feb262b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "de0a89c1-d53b-435a-b825-9edc1feb262b"
+        }
       },
       "source": [
         "import os, urllib, glob, sys\n",
@@ -127,7 +135,7 @@
         "os.system(cmd_string)\n",
         "cmd_string, password = \"\", \"\" # removing the password from the variable"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,17 +152,17 @@
       "metadata": {
         "id": "-qVMIe5tIK9Y",
         "colab_type": "code",
+        "outputId": "1c9e6078-2a2c-410b-811f-e88a327afcd9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1c9e6078-2a2c-410b-811f-e88a327afcd9"
+        }
       },
       "source": [
         "%cd AYP/\n",
         "sys.path.append('./code/')"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,6 +190,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uLnRLKCxwJbR",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Implementation"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -225,17 +243,17 @@
       "metadata": {
         "id": "GVBvRhVkMCyS",
         "colab_type": "code",
+        "outputId": "f5249e4d-7381-4391-e3f5-2edfe665b3df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
-        },
-        "outputId": "f5249e4d-7381-4391-e3f5-2edfe665b3df"
+        }
       },
       "source": [
         "np.random.seed(42)\n",
         "df_top['cluster_pred'] = np.array(np.random.randint(0,5,size=(len(df_top))))"
       ],
-      "execution_count": 176,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,11 +284,11 @@
       "metadata": {
         "id": "q5FKA468P30T",
         "colab_type": "code",
+        "outputId": "8143b94c-4d8c-4956-e1dc-c70828cb1a8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
-        },
-        "outputId": "8143b94c-4d8c-4956-e1dc-c70828cb1a8d"
+        }
       },
       "source": [
         "# Creating a dictionary where each cluster is assigned an ID based off psuedo-code written above K_dict[pi_id] = # of cluster\n",
@@ -291,7 +309,7 @@
         "\n",
         "df_top['cluster_max'] = [K_dict[pid] for pid in df_top.PI_IDS]"
       ],
-      "execution_count": 177,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,16 +340,16 @@
       "metadata": {
         "id": "xy8qdofPX6B3",
         "colab_type": "code",
+        "outputId": "ca4c0e0a-dded-412e-cc4c-3536cc100683",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ca4c0e0a-dded-412e-cc4c-3536cc100683"
+        }
       },
       "source": [
         "print(\"Precision score: {}, Recall score: {}\".format(precision_score(df_top.cluster_max,df_top.cluster_pred,average='micro'),recall_score(df_top.cluster_max,df_top.cluster_pred,average='micro')))"
       ],
-      "execution_count": 178,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,11 +403,11 @@
       "metadata": {
         "id": "VsOaondplFm6",
         "colab_type": "code",
+        "outputId": "8c385884-a405-4bd1-dd55-cb6d3b3c56e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8c385884-a405-4bd1-dd55-cb6d3b3c56e5"
+        }
       },
       "source": [
         "#mis-integration - for each cluster, see how many dif people were attributed to it\n",
@@ -405,7 +423,7 @@
         "\n",
         "print(mis_intergration_dict)"
       ],
-      "execution_count": 188,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,6 +432,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q8dNbzagwPFe",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Still needs to be discussed when # of clusters is larger and smaller than the #  of pi_ids**"
       ]
     }
   ]
