--- a/code/1_Getting_Labeled_Data.ipynb
+++ b/code/1_Getting_Labeled_Data.ipynb
@@ -24,6 +24,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q6H50p81rVf6",
+        "colab_type": "text"
+      },
+      "source": [
+        " <h3> Outline</h3>\n",
+        "\n",
+        "Code to unzip the files pulled from the NIH database, merge them, and do a bit of cleaning."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iyDv71sLsI8L",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Initilizations"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "yGFkbYhGrpCq",
@@ -64,7 +86,7 @@
         "os.system(cmd_string)\n",
         "cmd_string, password = \"\", \"\" # removing the password from the variable"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,16 +103,16 @@
       "metadata": {
         "id": "1voj-ngzFZnL",
         "colab_type": "code",
+        "outputId": "9ea8448e-4847-4bce-fe57-7aaae4b4d88d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9ea8448e-4847-4bce-fe57-7aaae4b4d88d"
+        }
       },
       "source": [
         "%cd /content/AYP"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,16 +128,16 @@
       "metadata": {
         "id": "mD_iOy2iFDzp",
         "colab_type": "code",
+        "outputId": "5dc2f43d-186b-471e-948d-4cdedc97dde7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5dc2f43d-186b-471e-948d-4cdedc97dde7"
+        }
       },
       "source": [
         "!pwd"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,13 +151,25 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "iJ0DxhyJsOlP",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Implementation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "aZwrlqCy22ZB",
         "colab_type": "text"
       },
       "source": [
         "Databases were scraped from:\n",
-        "https://exporter.nih.gov/ExPORTER_Catalog.aspx?sid=0&index=5\n",
+        "https://exporter.nih.gov/ExPORTER_Catalog.aspx?sid=0&index=5<br>\n",
         "https://exporter.nih.gov/ExPORTER_Catalog.aspx?sid=5&index=0\n",
+        "\n",
+        "Data was only taken from three years '09 - '15' - '18 <br>\n",
         "\n",
         "(There is a theoretical other dataset on the publications themselves, if we so need).\n",
         "\n",
@@ -206,7 +240,7 @@
         "df.to_csv(PATH2 + 'NIH_precleaning.csv',encoding='utf-8')\n",
         "pd.Series(pd.unique(df.PMID)).to_csv(PATH2 + 'unique_pmid_no_dup.csv', encoding='utf-8', header=False)"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,16 +287,16 @@
       "metadata": {
         "id": "-2E68bnQT070",
         "colab_type": "code",
+        "outputId": "1cdd4a50-5df0-40ad-b956-5566c7e73531",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "1cdd4a50-5df0-40ad-b956-5566c7e73531"
+        }
       },
       "source": [
         "df.groupby('FY')['PMID'].nunique()"
       ],
-      "execution_count": 57,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,16 +314,6 @@
           },
           "execution_count": 57
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "y0fhwbA03_91",
-        "colab_type": "text"
-      },
-      "source": [
-        "Theoretically, we have 250K publications to use, with enough pre-2014 to see how our enriched dataset helps."
       ]
     }
   ]
