See if fixed s3 works with import boto

--- a/code/1_clean_NIH_dataset.ipynb
+++ b/code/1_clean_NIH_dataset.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "clean_NIH_dataset.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP/75w5AskdvNak5pmCf7C2",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMbUIIhaMb/Ku16WLcKZdR0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,11 +55,11 @@
       "metadata": {
         "id": "72UixsP-uoMa",
         "colab_type": "code",
+        "outputId": "8ee0a4e9-ed59-4151-b150-3889d20c4e90",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "8ee0a4e9-ed59-4151-b150-3889d20c4e90"
+        }
       },
       "source": [
         "import os, urllib, glob, sys\n",
@@ -72,7 +73,7 @@
         "os.system(cmd_string)\n",
         "cmd_string, password = \"\", \"\" # removing the password from the variable"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,16 +90,16 @@
       "metadata": {
         "id": "Edf0lX-Ou_0R",
         "colab_type": "code",
+        "outputId": "ab3c6b58-6ad3-4ee6-ab30-459ee185b6e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ab3c6b58-6ad3-4ee6-ab30-459ee185b6e2"
+        }
       },
       "source": [
         "% cd '/content/AYP/code'"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,16 +115,16 @@
       "metadata": {
         "id": "BvVNCgHRvOz8",
         "colab_type": "code",
+        "outputId": "075e0cbf-575a-4d96-d023-843eefeb6300",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "075e0cbf-575a-4d96-d023-843eefeb6300"
+        }
       },
       "source": [
         "!pip install boto"
       ],
-      "execution_count": 141,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +191,7 @@
         "print(df.head())\n",
         "print(df.shape)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,7 +312,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 129,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -414,18 +415,18 @@
       "metadata": {
         "id": "5bGb8mLh1r7L",
         "colab_type": "code",
+        "outputId": "82011d15-be33-4984-91ac-84ef14b07191",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49
-        },
-        "outputId": "82011d15-be33-4984-91ac-84ef14b07191"
+        }
       },
       "source": [
         "#Get rid of NaN data\n",
         "df.dropna(inplace=True)\n",
         "df.loc[df.cleaned_name.isna()]"
       ],
-      "execution_count": 130,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -476,11 +477,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QZVVac4LXt97",
+        "colab_type": "text"
+      },
+      "source": [
+        "# UPLOAD TO S3 NOT WORKING"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "e6ILIv_RAvk-",
         "colab_type": "code",
-        "outputId": "1710cd44-5c10-4854-cd8f-eb15e8462cb9",
+        "outputId": "64a5cf15-5c6c-4781-d77c-2cd184e2c772",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 353
@@ -489,10 +500,10 @@
       "source": [
         "df.to_csv(\"./NIH_postcleaning.csv\")\n",
         "file = open(\"./NIH_postcleaning.csv\", 'r+', encoding='utf-8')\n",
-        "s3_functions.upload_to_s3(file=d,key = 'NIH_postcleaning.csv')\n",
+        "s3_functions.upload_to_s3(file=file,key = 'NIH_postcleaning.csv')\n",
         "file.close()"
       ],
-      "execution_count": 144,
+      "execution_count": 181,
       "outputs": [
         {
           "output_type": "error",
@@ -501,25 +512,12 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-144-8ed63d329e68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./NIH_postcleaning.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./NIH_postcleaning.csv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r+'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0ms3_functions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupload_to_s3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'NIH_postcleaning.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/content/AYP/code/s3_functions.py\u001b[0m in \u001b[0;36mupload_to_s3\u001b[0;34m(file, key, AWS_ACCESS_KEY, AWS_ACCESS_SECRET_KEY, bucket, callback, md5, reduced_redundancy, content_type)\u001b[0m\n\u001b[1;32m     74\u001b[0m         \u001b[0;31m# Not all file objects implement fileno(),\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m         \u001b[0;31m# so we fall back on this\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m         \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseek\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSEEK_END\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m         \u001b[0msize\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtell\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-181-8ed63d329e68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./NIH_postcleaning.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./NIH_postcleaning.csv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r+'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0ms3_functions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupload_to_s3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'NIH_postcleaning.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/content/AYP/code/s3_functions.py\u001b[0m in \u001b[0;36mupload_to_s3\u001b[0;34m(file, key, AWS_ACCESS_KEY, AWS_ACCESS_SECRET_KEY, bucket, callback, md5, reduced_redundancy, content_type)\u001b[0m\n\u001b[1;32m     74\u001b[0m     \u001b[0;31m#     # Not all file objects implement fileno(),\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m     \u001b[0;31m#     # so we fall back on this\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m     \u001b[0;31m#     file.seek(0, os.SEEK_END)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m     \u001b[0;31m#     size = file.tell()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mNameError\u001b[0m: name 'boto' is not defined"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gya4GJKONdmd",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
