Cleaned - STILL NEED TO FIX s3 UPLOAD

--- a/code/1_clean_NIH_dataset.ipynb
+++ b/code/1_clean_NIH_dataset.ipynb
@@ -6,7 +6,7 @@
       "name": "clean_NIH_dataset.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMbUIIhaMb/Ku16WLcKZdR0",
+      "authorship_tag": "ABX9TyMov9Z/S5Cm6ybJpDhkTYUX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -181,7 +181,7 @@
       "metadata": {
         "id": "4loiBND98HfO",
         "colab_type": "code",
-        "outputId": "d2680e26-d822-4643-8b29-a56c679d4faf",
+        "outputId": "3a6908d3-05a1-4a09-b282-77eeaa195c64",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
@@ -191,7 +191,7 @@
         "print(df.head())\n",
         "print(df.shape)"
       ],
-      "execution_count": 0,
+      "execution_count": 307,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +248,6 @@
         "  input: A cell of df[\"PI_NAMEs\"]\n",
         "  output: cleaned version of each PI in \"PI_NAMEs\"\n",
         "  '''\n",
-        "\n",
         "  name = name.lower()\n",
         "  names = name.split(';')\n",
         "\n",
@@ -264,6 +263,7 @@
         "  #remove empty strings\n",
         "  names = list(filter(lambda x: x != \"\", names))\n",
         "\n",
+        "\n",
         "  if len(names) == 0:\n",
         "    print(\"ERROR WITH NAME: \", name)\n",
         "    return \"ERROR WITH NAME\"\n",
@@ -272,15 +272,27 @@
         "    new_name = separate_names(names[0])\n",
         "      \n",
         "  else:\n",
-        "    new_name = \"\"\n",
+        "    new_name = []\n",
         "    for name in names:\n",
         "      added_name = separate_names(name)\n",
         "      # We want unfit names to get a 'nan' value so we can drop them, but will many people, we want to skip the name\n",
         "      if isinstance(added_name,str):\n",
-        "        new_name += added_name + ';'\n",
-        "    new_name = new_name.strip(';')\n",
+        "        new_name.append([added_name])\n",
         "\n",
         "  return new_name"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GFsbDt7fqQ6f",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# [clean_name(name) for name in df[df.index == 5273788].PI_NAMEs]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -303,7 +315,7 @@
       "metadata": {
         "id": "GN249ZWVeGIt",
         "colab_type": "code",
-        "outputId": "f4084e73-64fb-4480-b731-f42c020948a9",
+        "outputId": "f46ff67f-f698-4403-c44b-64cdfb6641f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -312,7 +324,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 331,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -406,7 +418,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 129
+          "execution_count": 331
         }
       ]
     },
@@ -415,18 +427,105 @@
       "metadata": {
         "id": "5bGb8mLh1r7L",
         "colab_type": "code",
-        "outputId": "82011d15-be33-4984-91ac-84ef14b07191",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 49
-        }
+        "colab": {}
       },
       "source": [
         "#Get rid of NaN data\n",
         "df.dropna(inplace=True)\n",
-        "df.loc[df.cleaned_name.isna()]"
+        "df.loc[df.cleaned_name.isna()]\n",
+        "\n",
+        "#Weirdly, the PI_IDS themselves were unclean, with empty spaces at the end, .strip() cleans it\n",
+        "df['PI_IDS'] = [x.strip() for x in df['PI_IDS']]"
       ],
       "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K1yRAiSjd18a",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def split_data_frame_list(df, \n",
+        "                       target_column,\n",
+        "                      output_type=float):\n",
+        "    ''' \n",
+        "    Accepts a column with multiple types and splits list variables to several rows.\n",
+        "\n",
+        "    df: dataframe to split\n",
+        "    target_column: the column containing the values to split\n",
+        "    output_type: type of all outputs\n",
+        "    returns: a dataframe with each entry for the target column separated, with each element moved into a new row. \n",
+        "    The values in the other columns are duplicated across the newly divided rows.\n",
+        "    '''\n",
+        "    row_accumulator = []\n",
+        "\n",
+        "    def split_list_to_rows(row):\n",
+        "        split_row = row[target_column]\n",
+        "        if isinstance(split_row, list):\n",
+        "          for s in split_row:\n",
+        "            new_row = row.to_dict()\n",
+        "            new_row[target_column] = output_type(s[0])\n",
+        "            row_accumulator.append(new_row)\n",
+        "        else:\n",
+        "          new_row = row.to_dict()\n",
+        "          new_row[target_column] = split_row\n",
+        "          row_accumulator.append(new_row)\n",
+        "  \n",
+        "    df.apply(split_list_to_rows, axis=1)\n",
+        "    new_df = pd.DataFrame(row_accumulator)\n",
+        "  \n",
+        "    return new_df"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2gOgU-ZqsEtc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#This function splits the 'cleaned_name' values into independent rows if there is more than one value\n",
+        "df = split_data_frame_list(df=df,target_column=\"cleaned_name\",output_type=str)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G5EaJZWssOSZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#drop duplicates\n",
+        "df.drop_duplicates(subset=['PMID','PROJECT_NUMBER','PI_IDS','cleaned_name'],keep='first',inplace=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xo3n-7WZeuzs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 269
+        },
+        "outputId": "00db12b9-09fc-4dec-a4b5-8cd254a3d83c"
+      },
+      "source": [
+        "#test ecxample that I used to prove effectiveness\n",
+        "df[df[\"PMID\"] == 25747927]"
+      ],
+      "execution_count": 374,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,20 +558,80 @@
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>948400</th>\n",
+              "      <td>25747927</td>\n",
+              "      <td>K05DA017009</td>\n",
+              "      <td>2009</td>\n",
+              "      <td>1871862;</td>\n",
+              "      <td>WOODY, GEORGE EDWARD;</td>\n",
+              "      <td>Woody, GE</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1419220</th>\n",
+              "      <td>25747927</td>\n",
+              "      <td>U10DA013043</td>\n",
+              "      <td>2015</td>\n",
+              "      <td>1871862;</td>\n",
+              "      <td>WOODY, GEORGE EDWARD;</td>\n",
+              "      <td>Woody, GE</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2043325</th>\n",
+              "      <td>25747927</td>\n",
+              "      <td>R01DA027633</td>\n",
+              "      <td>2009</td>\n",
+              "      <td>6572943;</td>\n",
+              "      <td>RAWSON, RICHARD A;</td>\n",
+              "      <td>Rawson, RA</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2043337</th>\n",
+              "      <td>25747927</td>\n",
+              "      <td>D43TW009102</td>\n",
+              "      <td>2015</td>\n",
+              "      <td>6572943;</td>\n",
+              "      <td>RAWSON, RICHARD A;</td>\n",
+              "      <td>Rawson, RA</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2056218</th>\n",
+              "      <td>25747927</td>\n",
+              "      <td>R01DA032733</td>\n",
+              "      <td>2015</td>\n",
+              "      <td>8253026; 2152680 (contact); 6572943;</td>\n",
+              "      <td>GLASNER-EDWARDS, SUZETTE V; KARNO, MITCHELL P ...</td>\n",
+              "      <td>Glasner-edwards, SV</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2056219</th>\n",
+              "      <td>25747927</td>\n",
+              "      <td>R01DA032733</td>\n",
+              "      <td>2015</td>\n",
+              "      <td>8253026; 2152680 (contact); 6572943;</td>\n",
+              "      <td>GLASNER-EDWARDS, SUZETTE V; KARNO, MITCHELL P ...</td>\n",
+              "      <td>Rawson, RA</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "Empty DataFrame\n",
-              "Columns: [PMID, PROJECT_NUMBER, FY, PI_IDS, PI_NAMEs, cleaned_name]\n",
-              "Index: []"
+              "             PMID  ...         cleaned_name\n",
+              "948400   25747927  ...            Woody, GE\n",
+              "1419220  25747927  ...            Woody, GE\n",
+              "2043325  25747927  ...           Rawson, RA\n",
+              "2043337  25747927  ...           Rawson, RA\n",
+              "2056218  25747927  ...  Glasner-edwards, SV\n",
+              "2056219  25747927  ...           Rawson, RA\n",
+              "\n",
+              "[6 rows x 6 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 130
+          "execution_count": 374
         }
       ]
     },
@@ -491,7 +650,7 @@
       "metadata": {
         "id": "e6ILIv_RAvk-",
         "colab_type": "code",
-        "outputId": "64a5cf15-5c6c-4781-d77c-2cd184e2c772",
+        "outputId": "f9dc6f25-5ce8-48e3-bdab-6f7b643367ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 353
@@ -503,7 +662,7 @@
         "s3_functions.upload_to_s3(file=file,key = 'NIH_postcleaning.csv')\n",
         "file.close()"
       ],
-      "execution_count": 181,
+      "execution_count": 375,
       "outputs": [
         {
           "output_type": "error",
@@ -512,10 +671,99 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-181-8ed63d329e68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./NIH_postcleaning.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./NIH_postcleaning.csv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r+'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0ms3_functions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupload_to_s3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'NIH_postcleaning.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-375-8ed63d329e68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./NIH_postcleaning.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./NIH_postcleaning.csv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r+'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0ms3_functions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupload_to_s3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'NIH_postcleaning.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/content/AYP/code/s3_functions.py\u001b[0m in \u001b[0;36mupload_to_s3\u001b[0;34m(file, key, AWS_ACCESS_KEY, AWS_ACCESS_SECRET_KEY, bucket, callback, md5, reduced_redundancy, content_type)\u001b[0m\n\u001b[1;32m     74\u001b[0m     \u001b[0;31m#     # Not all file objects implement fileno(),\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m     \u001b[0;31m#     # so we fall back on this\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m     \u001b[0;31m#     file.seek(0, os.SEEK_END)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m     \u001b[0;31m#     size = file.tell()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mNameError\u001b[0m: name 'boto' is not defined"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RU4TCcvmxDGz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "import boto\n",
+        "def upload_to_s3(aws_access_key_id, aws_secret_access_key, file, bucket, key, callback=None, md5=None, reduced_redundancy=False, content_type=None):\n",
+        "    \"\"\"\n",
+        "    Uploads the given file to the AWS S3\n",
+        "    bucket and key specified.\n",
+        "    \n",
+        "    callback is a function of the form:\n",
+        "    \n",
+        "    def callback(complete, total)\n",
+        "    \n",
+        "    The callback should accept two integer parameters,\n",
+        "    the first representing the number of bytes that\n",
+        "    have been successfully transmitted to S3 and the\n",
+        "    second representing the size of the to be transmitted\n",
+        "    object.\n",
+        "    \n",
+        "    Returns boolean indicating success/failure of upload.\n",
+        "    \"\"\"\n",
+        "    try:\n",
+        "        size = os.fstat(file.fileno()).st_size\n",
+        "    except:\n",
+        "        # Not all file objects implement fileno(),\n",
+        "        # so we fall back on this\n",
+        "        file.seek(0, os.SEEK_END)\n",
+        "        size = file.tell()\n",
+        "    \n",
+        "    conn = boto.connect_s3(aws_access_key_id, aws_secret_access_key)\n",
+        "    bucket = conn.get_bucket(bucket, validate=True)\n",
+        "    k = Key(bucket)\n",
+        "    k.key = key\n",
+        "    if content_type:\n",
+        "        k.set_metadata('Content-Type', content_type)\n",
+        "    sent = k.set_contents_from_file(file, cb=callback, md5=md5, reduced_redundancy=reduced_redundancy, rewind=True)\n",
+        "    \n",
+        "    # Rewind for later use\n",
+        "    file.seek(0)\n",
+        "    \n",
+        "    if sent == size:\n",
+        "        return True\n",
+        "    return False"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ToNlVCFQwtXa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9b48f48d-75f9-431d-8743-e34a8eaa8faf"
+      },
+      "source": [
+        "AWS_ACCESS_KEY = 'AKIAIA55FCCZKLRCFQKQ'\n",
+        "AWS_ACCESS_SECRET_KEY = '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'\n",
+        "\n",
+        "file = open('./NIH_postcleaning.csv', 'r+')\n",
+        "\n",
+        "key = file.name\n",
+        "bucket = 'ayp-data'\n",
+        "\n",
+        "if upload_to_s3(AWS_ACCESS_KEY, AWS_ACCESS_SECRET_KEY, file, bucket, key):\n",
+        "    print('It worked!')\n",
+        "else:\n",
+        "    print ('The upload failed...')\n"
+      ],
+      "execution_count": 380,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "It worked!\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
