--- a/code/2_metric_classification.ipynb
+++ b/code/2_metric_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "2_metric_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNgjPbbwTEjw8Wa8a1FvKU6",
+      "authorship_tag": "ABX9TyNtMrNIP67fPrwJIXpGD11X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,24 +97,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZrMP3eXPL-8b",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "from collections import Counter \n",
-        "from sklearn.metrics import precision_score\n",
-        "from sklearn.metrics import recall_score\n",
-        "from collections import defaultdict"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "kz_lqQxcIJhp",
         "colab_type": "code",
         "outputId": "de0a89c1-d53b-435a-b825-9edc1feb262b",
@@ -176,17 +158,31 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ZrMP3eXPL-8b",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from collections import Counter \n",
+        "from sklearn.metrics import precision_score\n",
+        "from sklearn.metrics import recall_score\n",
+        "from collections import defaultdict\n",
+        "import s3_function"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "6F4Oo5EWIsuW",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "import s3_functions\n",
-        "AWS_ACCESS_KEY = 'AKIAIA55FCCZKLRCFQKQ'\n",
-        "AWS_ACCESS_SECRET_KEY = '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'\n",
-        "bucket = 'ayp-data'\n",
-        "key = 'enriched_labeled_dataset.csv'\n",
-        "df = s3_functions.get_dataframe_from_s3(AWS_ACCESS_KEY,AWS_ACCESS_SECRET_KEY,key,bucket)"
+        "df= s3_functions.get_dataframe_from_s3(file=\"enriched_labeled_dataset.csv\")"
       ],
       "execution_count": 0,
       "outputs": []
